added icons for the 3 buttons in pluginpanel view

--- a/frontend/app/styles/_pluginpanel.sass
+++ b/frontend/app/styles/_pluginpanel.sass
@@ -40,7 +40,7 @@
          float: right
    .actions
       .refresh_xml-button
-         i
+         .spinner
             display: none
    .xml-errors
       md-list-item
