corrected mistyped in usage of translate filter

--- a/frontend/app/views/signup.html
+++ b/frontend/app/views/signup.html
@@ -10,7 +10,7 @@
                <div ng-message="required">{{'FIELD_REQUIRED'|translate}}</div>
                <div ng-message="tooshort">{{'SIGNUP_USERNAME_TOOSHORT'|translate:'{n: 4}'}}</div>
                <div ng-message="toolong">{{'SIGNUP_USERNAME_TOOLONG'|translate:'{n: 28}'}}</div>
-               <div ng-message="badcharacters">{{'SIGNUP_USERNAME_BADCHARACTERS':|translate}}</div>
+               <div ng-message="badcharacters">{{'SIGNUP_USERNAME_BADCHARACTERS'|translate}}</div>
             </div>
          </md-input-container>
          <md-input-container>
