--- a/frontend/app/views/plugin.html
+++ b/frontend/app/views/plugin.html
@@ -87,6 +87,12 @@
                   <a href="{{plugin.homepage_url}}">{{plugin.homepage_url}}</a>
                </span>
             </li>
+            <li ng-show="plugin.homepage_url">
+               <label translate="README"></label>
+               <span>
+                  <a href="{{plugin.readme_url}}">{{plugin.readme_url}}</a>
+               </span>
+            </li>
             <li ng-show="plugin.issues_url">
                <label translate="PLUGIN_ISSUES"></label>
                <span>
