showing readme_url only if readme_url

--- a/frontend/app/views/plugin.html
+++ b/frontend/app/views/plugin.html
@@ -87,7 +87,7 @@
                   <a href="{{plugin.homepage_url}}">{{plugin.homepage_url}}</a>
                </span>
             </li>
-            <li ng-show="plugin.homepage_url">
+            <li ng-show="plugin.readme_url">
                <label translate="README"></label>
                <span>
                   <a href="{{plugin.readme_url}}">{{plugin.readme_url}}</a>
