"I forgot my password" feature part. 1
 + controller logic to open the dialog
 + dialog constructor
 + translations for created strings
 + 2 or 3 line of extra sass for the dialog
 + and of course the iforgotmypassword.html view (with the dialog mentionned in first bullet)

--- a/frontend/app/styles/main.sass
+++ b/frontend/app/styles/main.sass
@@ -12,7 +12,8 @@
 @import 'compact_list'
 @import 'plugin_list'
 @import 'plugin'
-@import "register"
+@import 'login'
+@import 'register'
 @import 'contact'
 @import 'submit_plugin'
 @import 'social_icons'
