"I forgot my password" feature part. 2
 + building the HTTP request schema
 + creating a backend endpoint for the purpose
  + which sends 200 OK right now anyway

--- a/frontend/app/views/iforgotmypassword.html
+++ b/frontend/app/views/iforgotmypassword.html
@@ -17,9 +17,11 @@
        <form ng-submit="sendPasswordResetRequest()">
            <md-input-container>
                <label>{{'EMAIL'|translate}}</label>
-               <input type="text">
+                <input type="email" ng-model="userWhoLostPassword.email">
            </md-input-container>
-           
+
+           <div vc-recaptcha theme="light" key="key" on-create="setWidgetId(widgetId)" on-success="setResponse(response)" on-expire="cbExpiration()"></div>
+
            <md-button class="md-raised md-primary" type="submit" translate="SEND_MAIL_PASSWORD_RESET_LINK"></md-button>
        </form>       
    </div>
