correcting a keyboard type error

--- a/api/mailtemplates/templates/reset_your_password.html
+++ b/api/mailtemplates/templates/reset_your_password.html
@@ -11,7 +11,7 @@
 </p>
 
 <p>
-    <a href="{{client_url}}/#/resetpassword/{{reset_password_token}}">This link</a> will you to the password reset page.
+    <a href="{{client_url}}/#/resetpassword/{{reset_password_token}}">This link</a> will lead you to the password reset page.
 </p>
 
 {% endblock %}
