simplifying reset_your_password mail

--- a/api/mailtemplates/templates/reset_your_password.html
+++ b/api/mailtemplates/templates/reset_your_password.html
@@ -4,11 +4,7 @@
 
 <h1>Dear {{user.username}},</h1>
 
-<p class="lead">Yes you can reset your GLPi:Plugins Password.</p>
-
-<p>
-    You're here because you want to reset your GLPi Plugins password.
-</p>
+<p class="lead">Yes you can reset your GLPi Plugin Directory Password.</p>
 
 <p>
     <a href="{{client_url}}/#/resetpassword/{{reset_password_token}}">This link</a> will lead you to the password reset page.
