fix download count in plugin admin panel

--- a/frontend/app/views/pluginpanel.html
+++ b/frontend/app/views/pluginpanel.html
@@ -21,7 +21,7 @@
                </li>
                <li>
                   <label translate="DOWNLOADED"></label>
-                  <span translate="PLUGIN_PANEL_N_TIMES" translate-value-n="94800"></span>
+                  <span ng-bind-html='plugin.card.download_count | nrFormat'></span>
                </li>
                <li>
                   <label translate="PLUGIN_PANEL_CONTRIBUTORS"></label>
