--- a/frontend/app/views/tags.html
+++ b/frontend/app/views/tags.html
@@ -9,7 +9,7 @@
          <md-button ui-sref="tag({key: tag.key})">
             <h4>{{tag.tag}}</h4>
          </md-button>
-         <span class="info" translate="TAGS_TAGGED_WITH_N_PLUGINS" translate-value-n="{{tag.plugin_count}}"></span class="info">
+         <span class="info" translate="TAGGED_ON_N_PLUGINS" translate-value-plugincount="{{tag.plugin_count}}"></span class="info">
       </md-list-item>
    </md-list>
 
