add style for markdown table

--- a/frontend/app/styles/_plugin.sass
+++ b/frontend/app/styles/_plugin.sass
@@ -53,6 +53,16 @@
    .markdown
       li
          list-style-type: inherit
+      table, th, td
+         border: 1px solid black
+
+      table
+         border-collapse: collapse
+         width: 100%
+
+         th, td
+         padding: 15px
+         text-align: left
 
    .infos
       overflow: visible
