--- a/frontend/app/styles/_plugin.sass
+++ b/frontend/app/styles/_plugin.sass
@@ -54,7 +54,7 @@
       li
          list-style-type: inherit
       table, th, td
-         border: 1px solid black
+         border: 1px solid silver
 
       table
          border-collapse: collapse
