annotate state tag in xml example

--- a/frontend/app/views/submit.html
+++ b/frontend/app/views/submit.html
@@ -24,7 +24,7 @@
          <root>
             <name>Displayed name</name>
             <key>System name</key>
-            <state>stable</state>
+            <state>stable</state> <!-- stable | unstable | beta | alpha -->
             <logo>http://link/to/logo/with/dimensions/40px/40px</logo>
             <description>
                <short>
