permits to push download_url in plugin_version (used in marketplace)

--- a/frontend/app/views/submit.html
+++ b/frontend/app/views/submit.html
@@ -46,7 +46,8 @@
             <versions>
                <version>
                   <num>1.0</num>
-                  <compatibility>0.90</compatibility>
+                  <compatibility>~9.4.0</compatibility>
+                  <download_url>http://link/to/your/file</download_url>
                </version>
             </versions>
             <langs>
