Use same scheme as website for Gravatar images; fixes #67

--- a/frontend/app/views/author.html
+++ b/frontend/app/views/author.html
@@ -5,7 +5,7 @@
             <h2>{{author.name}}</h2>
          </td>
          <td ng-show="author.gravatar" class="value">
-            <img src="http://www.gravatar.com/avatar/{{author.gravatar}}" alt="{{author.name}}'s gravatar">
+            <img src="//www.gravatar.com/avatar/{{author.gravatar}}" alt="{{author.name}}'s gravatar">
          </td>
       </tr>
       <tr>
