--- a/frontend/app/views/submit.html
+++ b/frontend/app/views/submit.html
@@ -40,6 +40,7 @@
             <download>http://link/to/your/files</download>
             <issues>http://link/to/your/issues</issues>
             <readme>http://link/to/your/readme</readme>
+            <changelog>http://link/to/your/changelog</changelog>
             <authors>
                <author>Your name</author>
             </authors>
